stage-3: codeclimate fix